Removed MongoDB Adapted code and tests to HashiCorp vault
